test: add testing for backend code